Fixed comile error

--- a/Implementierung/Implementierungsprotokoll.tex
+++ b/Implementierung/Implementierungsprotokoll.tex
@@ -412,7 +412,7 @@ Die Abarbeitung der vom Nutzer zusammengestellten Aktivitätsliste erfolgt nun v
 \begin{itemize}
 	\item[-] CheckNextActivity(): void \textit{hinzugefügt}.
 	\item[-] IncreaseResultCounter(): void \textit{hinzugefügt}.
-	\item[-] DoActivity(): void \textut{entfernt}.
+	\item[-] DoActivity(): void \textit{entfernt}.
 \end{itemize}
 	
 \subsubsection{Pause in ListenAndPerform}
