sections / Struktur verändert (test raus,...), grob aufgaben zugeteilt

--- a/Implementierung/Implementierungsprotokoll.tex
+++ b/Implementierung/Implementierungsprotokoll.tex
@@ -87,6 +87,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% CONTENT %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Einleitung}
+%erwin:
+%% massenfingersaugaktion
+% gruppenzusammenarbeit, nuget, änderungen nur klein,
+% in bennjis präsi nachschauen und mit zahlen flexen. frag benji dass er dir die Präsentation schickt
+
+
 %%%%%%%%%%%%%%%%%%%%%% !!!!!!!!!!!!  struktur - Schema (runde Klammern = optional)
 %
 \section{Schema für Probleme und Änderungen am Entwurf}
@@ -106,7 +112,7 @@
 \end{itemize}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%% !!!!!!!!!!!!!!!
-
+\section{Implemetierung der Erkennungsalgorithmen}
 \section{Probleme und Änderungen am Entwurf}
 \subsection{Bibliothek}
 
@@ -560,14 +566,12 @@ Das ScanningPopUp zeigt nach dem betätigen des Buttons 'Scan Devices' die Liste
 	\item[$-$] ConnectButton\_Clicked() : Methode \textit{hinzugefügt}. Dies ist eine Eventmethode, welche beim Betätigen des Connect button aufgerufen wird.
 \end{itemize} 
 
-\section{Statistik der Testfälle}
-
 \section{Implementierungsplan}
-
+%benni
 \includegraphics[width=\textwidth]{bilder/Implementierungsplan.png}
 \section{Anhang}
-
-
+die ganzen Verweise zum repo, nuget
+%valle
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% END CONTENT %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
